# error-enum

./: Cargo.toml  readme.md
.cargo/: config.toml  publish.sh
.github/workflows/: ci.yml
error-enum/: Cargo.toml
error-enum-core/: Cargo.toml
error-enum-core/src/: annotate_snippets_impl.rs  ariadne_impl.rs  codespan_reporting_impl.rs  indexer.rs  label_groups.rs  labels.rs  lib.rs  miette_impl.rs  span.rs
error-enum-core/tests/: diagnostic_kind.rs  dyn_compatibility.rs  indexer.rs  label_grouping.rs
error-enum-macros/: Cargo.toml  attributes.md
error-enum-macros/examples/: fs.rs
error-enum-macros/src/: lib.rs  tests.rs
error-enum-macros/src/tests/: basic.rs  derive.rs  mod.rs  nested.rs
error-enum-macros/tests/: colorful.rs
error-enum/examples/: custom_kind.rs  fs.rs  nested.rs  python.rs  wrapper.rs
error-enum/src/: annotate_snippets_impl.rs  ariadne_impl.rs  codespan_reporting_impl.rs  indexer.rs  lib.rs  miette_impl.rs  span.rs
error-enum/tests/: colorful.rs
examples/: fs.rs  nested.rs
src/: lib.rs  tests.rs
tests/: colorful.rs
