[package]
name = "error-enum"
version = "0.4.1"
edition = "2021"
readme = "readme.md"
keywords = ["error", "derive", "enum", "tree"]
description = "Provide a easy way to define an enum that represents errors with error codes, document comments and several other functionalities."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
lazy-regex = "3.4.2"

[dev-dependencies]
annotate-snippets = { version = "0.9.1" }
