[workspace.package]
version = "0.4.1"
edition = "2021"
readme = "readme.md"
keywords = ["error", "derive", "enum", "tree"]
description = "Provide a easy way to define an enum that represents errors with error codes, document comments and several other functionalities."
license = "MIT/Apache-2.0"

[workspace]
members = ["error-enum-macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
