[workspace.package]
version = "0.4.1"
edition = "2021"
readme = "readme.md"
keywords = ["error", "derive", "enum", "tree"]
description = "Provide a easy way to define an enum that represents errors with error codes, document comments and several other functionalities."
license = "MIT/Apache-2.0"
repository = "https://github.com/TheVeryDarkness/error-enum"
categories = ["development-tools"]

[workspace]
resolver = "3"
members = ["error-enum", "error-enum-macros"]

[workspace.dependencies]
error-enum = { path = "error-enum", version = "0.4.1" }
error-enum-core = { path = "error-enum-core", version = "0.4.1" }
error-enum-macros = { path = "error-enum-macros", version = "0.4.1" }

annotate-snippets = { version = "0.9.1" }
ariadne = { version = "0.6.0" }
codespan-reporting = "0.13.1"
lazy-regex = "3.4.2"
miette = { version = "7.6.0", default-features = false }
mitsein = { version = "0.8.0", default-features = false }
proc-macro2 = "1"
prettydiff = "0.9.0"
quote = "1"
stringzilla = "4.4.2"
syn = { version = "2", features = ["full"] }

[workspace.lints.rust]
missing_docs = "deny"
private_interfaces = "deny"
# unused_crate_dependencies = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
cargo = { level = "deny", priority = 1 }
expect_used = "deny"
needless_doctest_main = "allow"
panic = "deny"
todo = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
