[package]
name = "error-enum-core"
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
annotate-snippets = ["dep:annotate-snippets"]
ariadne = ["dep:ariadne"]
codespan-reporting = ["dep:codespan-reporting"]
miette = ["dep:miette"]

[dependencies]
annotate-snippets = { workspace = true, optional = true }
ariadne = { workspace = true, optional = true }
codespan-reporting = { workspace = true, optional = true }
miette = { workspace = true, optional = true }
stringzilla.workspace = true

[lints]
workspace = true
