[package]
name = "error-enum-macros"
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
lazy-regex = "3.4.2"

[dev-dependencies]
annotate-snippets = { version = "0.9.1" }
