[package]
name = "error-enum-macros"
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
lazy-regex.workspace = true

[dev-dependencies]
prettydiff.workspace = true

[lints]
workspace = true
