[package]
name = "error-enum"
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
annotate-snippets = ["dep:annotate-snippets"]
ariadne = ["dep:ariadne"]
codespan-reporting = ["dep:codespan-reporting"]
miette = ["dep:miette"]

[dependencies]
error-enum-macros = { workspace = true }
error-enum-core = { workspace = true }

annotate-snippets = { workspace = true, optional = true }
ariadne = { workspace = true, optional = true }
codespan-reporting = { workspace = true, optional = true }
miette = { workspace = true, optional = true }

[dev-dependencies]
annotate-snippets = { version = "0.9.1", features = ["color", "yansi-term"] }
ariadne.workspace = true
miette = { version = "7.6.0", default-features = false, features = ["fancy"] }
prettydiff.workspace = true

[lints]
workspace = true
