[package]
name = "error-enum"
version.workspace = true
edition.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
annotate-snippets = ["error-enum-core/annotate-snippets"]
ariadne = ["error-enum-core/ariadne"]
codespan-reporting = ["error-enum-core/codespan-reporting"]
miette = ["error-enum-core/miette"]

[dependencies]
error-enum-macros = { workspace = true }
error-enum-core = { workspace = true }

[dev-dependencies]
annotate-snippets = { version = "0.9.1", features = ["color", "yansi-term"] }
ariadne.workspace = true
codespan-reporting = { version = "0.13.1", default-features = false, features = [
    "termcolor",
] }
miette = { version = "7.6.0", default-features = false, features = ["fancy"] }
prettydiff.workspace = true

[lints]
workspace = true
